--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -265,6 +265,7 @@ Image
 
 \multirow{7}{0.3\textwidth}{Behaviour-Hiding Module} & Account Creation Interface\\
 & Account Database\\
+& Account Database Connector\\
 & Account Update Interface\\
 & Login Interface\\
 & Access Token\\
@@ -294,7 +295,6 @@ Image
 \midrule
 
 \multirow{3}{0.3\textwidth}{Software Decision Module} & {Account Creation Controller}\\
-& Account Database Connector\\
 & Account Update Controller\\
 & Authentication Controller\\
 & Satellite Image Request Controller\\
@@ -388,6 +388,15 @@ to be implemented.
 \begin{description}
 \item[Secrets:] The data structure, storage, and access mechanisms for account related data.
 \item[Services:] Can store, insert, update and retrieve user account data.
+\item[Implemented By:] OrbitWatch
+\item[Type of Module:] Abstract Data Type
+\end{description}
+
+\subsubsection{Account Database Connector (\mref{accdc})}
+
+\begin{description}
+\item[Secrets:] The database access key and database access algorithms.
+\item[Services:] Can request storage, insertion, updates and retrieval of user account data from the database.
 \item[Implemented By:] OrbitWatch
 \item[Type of Module:] Abstract Data Type
 \end{description}
@@ -567,15 +576,6 @@ to be implemented.
 \item[Type of Module:] Abstract Object
 \end{description}
 
-\subsubsection{Account Database Connector (\mref{accdc})}
-
-\begin{description}
-\item[Secrets:] The database access key and database access algorithms.
-\item[Services:] Can request storage, insertion, updates and retrieval of user account data from the database.
-\item[Implemented By:] OrbitWatch
-\item[Type of Module:] Abstract Data Type
-\end{description}
-
 \subsubsection{Account Update Controller (\mref{auc})}
 
 \begin{description}
@@ -678,8 +678,8 @@ FR8 &  \\
 FR9 & \mref{acc}, \mref{aci}, \mref{accdc}, \mref{accd}, \mref{user}, \mref{client} \\
 FR10 & \mref{ac}, \mref{li}, \mref{at}, \mref{accdc}, \mref{accd}, \mref{user}, \mref{labeler} \\
 FR11 & \mref{ac}, \mref{at}, \mref{accdc}, \mref{accd}, \mref{auc}, \mref{aui}, \mref{user}, \mref{client} \\
-FR13 &  \\
-FR14 &  \\
+FR13 &  \mref{lbli}, \mref{lblc}, \mref{label}, \mref{label server}, \mref{label database}, \mref{label database connector}, \mref{Image Service Manager}, \mref{Image Selection Service}\\
+FR14 &  \mref{ri}, \mref{rc}, \mref{Object Extraction Manager}, \mref{Label Confidence Service}, \mref{Object Extraction Service}, \mref{Image Prior Analyzer}, \mref{Image Mask Service}  \\
 LF0 & \mref{aui}, \mref{li}, \mref{aci}, \mref{siri}, \mref{srfi}, \mref{pci}, \mref{iui}, \mref{ri}, \mref{psi}, \mref{lbli}\\
 LF1 & \mref{aui}, \mref{li}, \mref{aci}, \mref{siri}, \mref{srfi}, \mref{pci}, \mref{iui}, \mref{ri}, \mref{psi}, \mref{lbli}\\
 LF2 & \mref{aui}, \mref{li}, \mref{aci}, \mref{siri}, \mref{srfi}, \mref{pci}, \mref{iui}, \mref{ri}, \mref{psi}, \mref{lbli}\\
@@ -692,27 +692,27 @@ UH9 & \mref{lbli} \\
 PR0 & \mref{aci}, \mref{acc}, \mref{client} \\
 PR1 & \mref{aci}, \mref{acc}, \mref{labeler} \\
 PR2 & \mref{ri}, \mref{rc}, \mref{report} \\
-PR3 & \mref{lbli}, \mref{lblc}, \mref{image} \\
-PR5 &  \\
+PR3 & \mref{lbli}, \mref{lblc}, \mref{image}, \mref{Image Service Manager}, \mref{Image Selection Service} \\
+PR5 &  \mref{ri}, \mref{rc}, \mref{Object Extraction Manager}, \mref{Label Confidence Service}, \mref{Object Extraction Service}, \mref{Image Prior Analyzer}, \mref{Image Mask Service}\\
 PR6 & Related to all modules \\
 PR7 & Related to all modules \\
-PR8 & \mref{iui}, \mref{siri}, \mref{sirc}, \mref{sirf} \\
+PR8 & \mref{iui}, \mref{siri}, \mref{sirc}, \mref{sirf}, \mref{Image Mask Service}, \mref{Image Service Manager}, \mref{Image Selection Service}, \mref{Image Prior Analyzer}, \mref{ImageObject database}, \mref{ImageObject database connector}\\
 PR9 & Related to all modules \\
 OE0 & Related to all modules \\
 OE1 & \mref{siri}, \mref{sirc}, \mref{sirf} \\
 OE4 &  \\
-OE5 &  \\
+OE5 &  \mref{ImageObject database}, \mref{ImageObject database connector}\\
 MR0 & Related to all modules \\
 SE0 & \mref{ac}, \mref{at}, \mref{lbli}, \mref{lblc}, \mref{psi}, \mref{psc} \\
 SE1 & \mref{ac}, \mref{at}, \mref{pci}, \mref{pcc} \\
 SE2 & \mref{aci}, \mref{acc} \\
 SE3 & \mref{aci}, \mref{acc} \\
 SE4 & \mref{srfi} \\
-SE5 & \mref{acc}, \mref{auc}, \mref{pcc} \\
+SE5 & \mref{acc}, \mref{auc}, \mref{pcc}, \mref{Object Extraction Manager}, \mref{Label Confidence Service}, \mref{Object Extraction Service}, \mref{Image Prior Analyzer}, \mref{Image Mask Service}\\
 SE6 &  \\
-SE7 & \mref{accd}, \mref{accdc} \\
+SE7 & \mref{accd}, \mref{accdc}, \mref{ImageObject database}, \mref{ImageObject database connector}, \mref{Labeller database connector}, \mref{Labeller database}, \mref{label database connector}, \mref{label database} \\
 SE8 & \mref{auc}, \mref{acc}, \mref{accd} \\
-SE10 & \mref{accdc} \\
+SE10 & \mref{accdc}, \mref{ImageObject database connector}, \mref{Labeller database connector} \mref{label database connector} \\
 
 \end{longtable}
 
