--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -253,6 +253,20 @@ involved in the Project}
     \hline
     Customers & Users of our application that will initiate requests for image analysis (service requests).\\
     \hline
+    AC & Anticipated Change\\
+    \hline
+    DAG & Directed Acyclic Graph \\
+    \hline
+    M & Module \\
+    \hline
+    MG & Module Guide \\
+    \hline
+    OS & Operating System \\
+    \hline
+    R & Requirement\\
+    \hline
+    UC & Unlikely Change \\
+    \hline
     \end{tabular}
     \caption{Naming Conventions and Terminology}
 \end{table}
