--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -615,6 +615,7 @@ to be implemented.
 \end{description}
 
 \subsubsection{Object Extraction Manager (\ref{Object Extraction Manager})}
+\begin{description}
 \item[Secrets:] The algorithms used to aggregate labels into usable ImageObjects for Model training.
 \item[Services:] Calls other modules to efficiently compute the most likely set of objects from a set of independent labels.
 \item[Implemented By:] [OrbitWatch]
@@ -762,7 +763,7 @@ to be implemented.
 \item[Services:] Selects an image to show to a given user. 
 \item[Implemented By:] [OrbitWatch]
 \item[Type of Module:] [Abstract Object]
-=======
+\end{description}
 
 
 \section{Traceability Matrix} \label{SecTM}
